// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > SelectStops renders correctly with no feed data 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      htmlFor="Selection"
    >
      Selection
    </label>
    <div
      className="btn-group btn-group-justified"
    >
      <a
        className="btn btn-sm btn-default"
        onClick={[Function]}
        tabIndex={0}
      >
        New
      </a>
      <a
        className="btn btn-sm btn-default disabled"
        onClick={[Function]}
        tabIndex={0}
      >
        Add to
      </a>
      <a
        className="btn btn-sm btn-default disabled"
        onClick={[Function]}
        tabIndex={0}
      >
        Remove from
      </a>
      <a
        className="btn btn-sm btn-default disabled"
        onClick={[Function]}
        tabIndex={0}
      >
        Clear
      </a>
    </div>
  </div>
  <div
    className="alert alert-info"
    role="alert"
  >
    <i
      className="fa fa-exclamation-circle fa-fw "
    />
    Click on the \`New\` button to create a polygon that encloses the stops you wish to select.
  </div>
</div>
`;

exports[`Component > SelectStops renders correctly with some selected stops 1`] = `
<div>
  <div
    className="form-group"
  >
    <label
      htmlFor="Selection"
    >
      Selection
    </label>
    <div
      className="btn-group btn-group-justified"
    >
      <a
        className="btn btn-sm btn-default disabled"
        onClick={[Function]}
        tabIndex={0}
      >
        New
      </a>
      <a
        className="btn btn-sm btn-default"
        onClick={[Function]}
        tabIndex={0}
      >
        Add to
      </a>
      <a
        className="btn btn-sm btn-default"
        onClick={[Function]}
        tabIndex={0}
      >
        Remove from
      </a>
      <a
        className="btn btn-sm btn-default"
        onClick={[Function]}
        tabIndex={0}
      >
        Clear
      </a>
    </div>
  </div>
  <ul>
    <li
      data-id="1"
    >
      Santa Cruz
    </li>
  </ul>
</div>
`;
